Chore: Improve null safety checks and replace legacy collections with modern equivalents in `Service`